# project_networking_backend_tiffanylaw123

./: README.md  database.sqlite  pyproject.toml  settings.py
app/: models.py  views.py
app/migrations/: 0001_initial.py  0002_rename_cuisines_recipe_cuisine.py  0003_recipe_time_taken.py  0004_alter_recipe_time_taken.py  0005_alter_recipe_time_taken.py
